2008-05-12  Srinivasa Ragavan  <sragavan@novell.com>

	* NEWS, configure.in : Evolution 2.23.2 release and version bump.

2008-05-08  Tor Lillqvist  <tml@novell.com>

	* evolution-zip.in: Include the whole etc/gconf/gconf.xml.defaults
	tree. The intent is to do "make install" to a temporary empty
	folder anyway, so there won't be any extra stuff in there. It is
	essential to get all the empty %gconf.xml files, also from the
	gconf.xml.defaults/apps folder.

2008-05-06  Matthew Barnes  <mbarnes@redhat.com>

	* configure.in:
	Bump eds_minimum_version to 2.23.2 for camel-iconv.h.

2008-04-30  Rob Bradford  <rob@openedhand.com>

	* configure.in:
	Link with libebackend (see #530576.)

2008-04-21  Srinivasa Ragavan  <sragavan@novell.com>

	* NEWS, configure.in: Evolution 2.23.1 release and version bump.

2008-04-18  Srinivasa Ragavan  <sragavan@novell.com>

	* MAINTAINERS: Update the Mail guards.

2008-04-17  Milan Crha  <mcrha@redhat.com>

	** Part of fix for bug #526739

	* configure.in: Drop dependency on gnome-vfs, depend on gio instead.

2008-04-11  Suman Manjunath  <msuman@novell.com>

	* configure.in: Bump glib package requirement: glib-2.0 >= 2.16.0

2008-04-05  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #526152

	* tools/killev.c (main):
	No need to continue killing the GnomeSpell Bonobo server.

2008-04-02  Matthew Barnes  <mbarnes@redhat.com>

	** Merge the mbarnes-composer branch

	* configure.in:
	Bump libgtkhtml requirement to 3.19.1.
	Add gtkhtml-editor dependency for addressbook, calendar and mail.
	Remove print-message plugin; new composer implements this natively.

	* tools/Makefile.am:
	Remove CORBA rules for the old composer.

	... separate issue ...

	* configure.in:
	Bump eds_minimum_version to 2.23.1 for
	CAMEL_FOLDER_JUNKED_NOT_DELETED symbol.

2008-04-01  Matthew Barnes  <mbarnes@redhat.com>

	* configure.in: Version bump for 2.23.1.

2008-03-25  Dan Williams  <dcbw@redhat.com>

	** Fix for bug #524310
