@@ -1,3 +1,11 @@
+2008-05-23  Matthew Barnes  <mbarnes@redhat.com>
+
+	** Fixes part of bug #534476
+
+	* gui/e-cal-popup.c (ecalp_standard_menu_factory):
+	Remove the special check for "winmail.dat".  GIO correctly
+	identifies it as "application/ms-tnef".
+
 2008-05-23  Milan Crha  <mcrha@redhat.com>
 
 	** Part of fix for bug #523402
